# GPU-programming

Exercise_1/: CMakeLists.txt  OpenCLExercise1_Basics.cpp
Exercise_1/src/: OpenCLExercise1_Basics2.cl
Exercise_2/: CMakeLists.txt  CMakeLists.txt~  README.txt
Exercise_2/src/: OpenCLExercise2_Mandelbrot.cl  OpenCLExercise2_Mandelbrot.cpp
Exercise_3/: CMakeLists.txt
Exercise_3/src/: OpenCLExercise3_Sobel.cpp
Exercise_4/: CMakeLists.txt
Exercise_4/src/: OpenCLExercise4_MatrixMultiplication.cl  OpenCLExercise4_MatrixMultiplication.cpp
Exercises/Exercise_1/: CMakeLists.txt
Exercises/Exercise_1/src/: OpenCLExercise1_Basics.cl
Exercises/Exercise_2/: CMakeLists.txt  README.txt
Exercises/Exercise_2/lib/OpenCL/: OpenCL.hpp
Exercises/Exercise_2/src/: OpenCLExercise2_Mandelbrot.cpp
Exercises/Exercise_3/: CMakeLists.txt
Exercises/Exercise_3/src/: OpenCLExercise3_Sobel.cl
Exercises/Exercise_4/: CMakeLists.txt
Image_classifier/: .gitignore  CMakeLists.txt  README.md  download_dataset.sh  install_dependencies.sh  test.cpp
Image_classifier/data/: readme.txt
Image_classifier/dataset/: readme.txt
Image_classifier/lib/OpenCL/: OpenCL.hpp
Image_classifier/src/: Cnn.cpp  Dataset.cpp  Dataset.h  Gpu.cpp  Gui.cpp  Image.cpp  Image.h  Matrix.cpp  Matrix.h  image_classifier.cpp  linalg.cpp  util.cpp  util.h
Image_classifier/src/include/: Cnn.h  Dataset.h  Gpu.h  Gui.h  Image.h  Matrix.h  Matrix.hpp  linalg.h  util.h
Image_classifier/src/kernels/: forward.cl  kernels.cl  preprocess.cl  test.cl
cnn-from-scratch/: .gitignore  CMakeLists.txt  Makefile  Util.cpp  Util.h  cnn.cpp  cnn.h  fnn.h  linAlgebra.h  test_fnn.cpp  test_np.cpp
cnn-from-scratch/src/: Matrix.cpp  Util.h  linAlgebra.cpp  test_cnn.cpp
